# tv-auto-onoff

./: .env.example  .gitignore  Cargo.toml  Justfile  LICENSE  README.md  rustfmt.toml
.github/: renovate.json  renovate.json5
.github/workflows/: tests.yml
src/: bravia.rs  desktop_idle.rs  logging.rs  main.rs  tv_manager.rs  util.rs
varia/: tv-auto-onoff.service
