[package]
name = "tv-auto-onoff"
version = "0.0.0"
edition = "2021"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Automatically power on/off TV like a computer display"
license = "MIT"
homepage = "https://github.com/intgr/tv-auto-onoff"
repository = "https://github.com/intgr/tv-auto-onoff"
keywords = ["sony", "tv", "screensaver", "gnome", "daemon"]
categories = ["accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.31"
futures-concurrency = "7.6.3"
futures-time = "3.0.0"
libc = "0.2.170"
log = { version = "0.4.26", features = ["std"] }
simple-error = "0.3.1"
simple_logger = "5.0.0"
time = { version = "0.3.37" }
zbus = "5.5.0"
