[package]
name = "tv-auto-onoff"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Automatically power on/off TV like a computer display"
license = "MIT"
homepage = "https://github.com/intgr/tv-auto-onoff"
repository = "https://github.com/intgr/tv-auto-onoff"
keywords = ["sony", "tv", "screensaver", "gnome", "daemon"]
categories = ["accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "2.6.0"
futures = "0.3.31"
futures-concurrency = "7.6.3"
libc = "0.2.180"
log = { version = "0.4.29", features = ["std"] }
simple-error = "0.3.2"
simple_logger = "5.1.0"
temp-env = "0.3.6"
time = { version = "0.3.45" }
zbus = "5.13.2"
