[package]
name = "tv-auto-onoff"
version = "0.0.0"
edition = "2024"
rust-version = "1.85.0"

# Metadata
authors = ["Marti Raudsepp <marti@juffo.org>"]
description = "Automatically power on/off TV like a computer display"
license = "MIT"
homepage = "https://github.com/intgr/tv-auto-onoff"
repository = "https://github.com/intgr/tv-auto-onoff"
keywords = ["sony", "tv", "screensaver", "gnome", "daemon"]
categories = ["accessibility"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-io = "2.6.0"
futures = "0.3.31"
futures-concurrency = "7.7.1"
libc = "0.2.175"
log = { version = "0.4.28", features = ["std"] }
simple-error = "0.3.1"
simple_logger = "5.2.0"
temp-env = "0.3.6"
time = { version = "0.3.44" }
zbus = "5.13.0"
